Fix Bug 305346 - KMail never automatically encrypts E-mail

config was not used

FIXED-IN: 4.9.1
BUG: 305346